Fix z-index value in style.css

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ nav{
     top:12px;
     padding:33px 13px;
     border:1px solid rgba(237, 237, 237, 0.9);
+    z-index:1000px;
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.2);
     
     
